tests/type-errors/duplicated_action.arl
archetype duplicated_action

entry main () {
  effect {
    require (true)
  }
}

entry main () {
  effect {
    require (true)
  }
}
